<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97916F"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#631625"
        android:text="Resultado de Empleado"
        android:textAlignment="center"
        android:textColor="#CED1E3"
        android:textSize="34sp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="20dp"
                android:background="#4CAF50"
                android:text="@string/etname2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:background="#4CAF50"
                android:text="@string/apelli2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/salar2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/IGSS"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/INTECAP"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/IRTRA"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/ISR"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:background="#4CAF50"
                android:text="@string/Bonoficaciones"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="45dp"
                android:background="#4CAF50"
                android:text="@string/salarfinal"
                android:textAlignment="center"
                android:textSize="23sp" />


            <Button
                android:id="@+id/rbot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="35dp"
                android:backgroundTint="@color/black"
                android:onClick="REGRESAR"
                android:text="@string/botonregresa"
                android:textColor="#CED1E3"
                android:textSize="20sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>