<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97916F"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#631625"
        android:text="REGISTRO DE DATOS"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#CED1E3"
        android:textSize="34sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#4CAF50"
            android:orientation="vertical"
            android:text="INGRESE SU NOMBRE"
            android:textAlignment="center"
            android:textColor="#14226E"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/et1n"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />

        <EditText
            android:id="@+id/et1n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:text="@string/etname1"
            tools:layout_editor_absoluteX="37dp"
            tools:layout_editor_absoluteY="94dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#4CAF50"
            android:orientation="vertical"
            android:text="INGRESE SU APELLIDO"
            android:textAlignment="center"
            android:textColor="#1C2A77"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/et2a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et1n" />

        <EditText
            android:id="@+id/et2a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:text="@string/apelli1"
            app:layout_constraintBottom_toTopOf="@+id/tv3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#4CAF50"
            android:orientation="vertical"
            android:text="INGRESE SU SALARIO"
            android:textAlignment="center"
            android:textColor="#20295A"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/et3s"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.305"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/et3s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:text="@string/salar1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv3" />

        <Button
            android:id="@+id/ebot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/black"
            android:textColor="#CED1E3"
            android:onClick="envio"
            android:text="@string/botonenvia"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="98dp"
            tools:layout_editor_absoluteY="450dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            app:srcCompat="@drawable/profile"
            tools:visibility="visible" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>